# FastAPI_note_tag

./: main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 18adaa22cb56_init.py
src/: schemas.py
src/repository/: notes.py  tags.py
