[tool.poetry]
name = "web-11"
version = "0.1.0"
description = ""
authors = ["kirienkovitaliy <kirienkovitaliy1989@gmail.com>"]
readme = "README.md"
packages = [{include = "web_11"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.97.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
